Подготовил приложение: подключил ORM, Kafka, проверку данных; убрал шаблонный сервис и контроллер

--- a/tasks/.prettierrc
+++ b/tasks/.prettierrc
@@ -1,4 +1,6 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "importOrder": ["^[./]"],
+  "importOrderSeparation": true
 }
